package prototype;

abstract class Prototype implements Cloneable {
    abstract public Prototype clone();
}