@startuml PrototypePatternClassDiagram

abstract class Prototype {
  +clone() : Prototype
}

class ConcretePrototype1 {
  +clone() : Prototype
}

class ConcretePrototype2 {
  +clone() : Prototype
}

Prototype <|-- ConcretePrototype1 : implements
Prototype <|-- ConcretePrototype2 : implements

note right of Prototype
  Prototype declares the clone()
  method which is implemented
  by its concrete subclasses.
end note

note right of ConcretePrototype1
  ConcretePrototype1 implements
  cloning mechanism specific
  to its class.
end note

note right of ConcretePrototype2
  ConcretePrototype2 implements
  cloning mechanism specific
  to its class.
end note

@enduml
